# agnosys

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  cyrb.toml  cyrius.cyml  cyrius.toml  deny.toml
.github/workflows/: ci.yml  consumer-integration.yml  release.yml
benches/: benchmarks.rs
docs/: SECURITY-NOTES.md  benchmarks-rust-vs-cyrius.md  doc-health.md
docs/adr/: 001-argv-exec-for-kernel-boundary-subprocesses.md  002-luks-cipher-allowlist.md  003-lib-modules-manifest-refactor.md
docs/architecture/: overview.md
docs/audit/: 2026-04-26-audit.md
docs/development/: MIGRATION.md  api-surface-1.0.md  api-surface-1.0.snapshot  capability-map.md  capacity-baseline.md  roadmap.md  state.md  upstream-blockers.md
docs/development/issues/: 2026-05-07-cyrius-aarch64-sub-8-byte-struct-load.md  2026-05-07-cyrius-derive-serialize-incomplete.md  2026-05-08-cyrius-derive-multi-stacking.md  2026-05-09-cyrius-api-surface-putc-brace-desync.md  2026-05-09-cyrius-deprecated-unproven.md  2026-05-09-cyrius-derive-serialize-cstring.md  2026-05-09-cyrius-ifplat-codegen.md  2026-06-12-cyrius-621-pin-json-carved-to-bayan.md
docs/development/issues/archive/: 2026-05-06-cyrius-match-coverage-fn-name-dependent.md  2026-05-07-cyrius-derive-serialize-incomplete.md  2026-05-08-cyrius-derive-multi-stacking.md  2026-05-09-cyrius-api-surface-putc-brace-desync.md
examples/: boot_info.rs  cert_pinning.rs  detect_hardware.rs  enumerate_devices.rs  gpu_info.rs  journal_query.rs  pam_users.rs  seccomp_sandbox.rs  security_status.rs  update_state.rs  verity_check.rs
fuzz/: Cargo.toml  audit_nlmsg.fcyr  audit_reply.fcyr  certpin_pin.fcyr  journald_filter.fcyr  luks_cipher.fcyr  pam_config.fcyr
fuzz/fuzz_targets/: fuzz_audit_line.rs  fuzz_boot_entry.rs  fuzz_certpin_der.rs  fuzz_ima_measurement.rs  fuzz_luks_header.rs  fuzz_pam_config.rs  fuzz_uevent_msg.rs  fuzz_verity_superblock.rs
lib/: bench.cyr  fs.cyr  hashmap.cyr  syscalls.cyr  syscalls_agnos.cyr  syscalls_linux.cyr  tagged.cyr
rust-old/benches/: benchmarks.rs
rust-old/examples/: audit_status.rs  boot_info.rs  cert_pinning.rs  detect_hardware.rs  enumerate_devices.rs  journal_query.rs  network_namespaces.rs  pam_users.rs  security_status.rs  sysinfo.rs
rust-old/fuzz/fuzz_targets/: fuzz_uevent_msg.rs  fuzz_verity_superblock.rs
rust-old/src/: bootloader.rs  drm.rs  lib.rs  logging.rs  luks.rs  mac.rs  netns.rs  security.rs  update.rs
rust-old/tests/: crash_test.cyr
scripts/: audit.sh  bench-history.sh  check-api-surface.sh  gen-api-surface-prose.sh  gen-capability-map.sh  version-bump.sh
src/: agent.rs  audit.cyr  audit.rs  bootloader.cyr  bootloader.rs  certpin.cyr  certpin.rs  dmverity.cyr  dmverity.rs  drm.cyr  drm.rs  error.cyr  error.rs  fuse.cyr  fuse.rs  ima.cyr  ima.rs  journald.cyr  journald.rs  landlock.rs  lib.rs  llm.rs  logging.cyr  logging.rs  luks.cyr  luks.rs  mac.cyr  mac.rs  main.cyr  netns.cyr  netns.rs  pam.cyr  pam.rs  seccomp.rs  secureboot.cyr  secureboot.rs  security.cyr  security.rs  syscall.cyr  syscall.rs  (+7 more)
supply-chain/: audits.toml  config.toml
tests/: bench_all.cyr  bench_compare.cyr  integration.rs  test.sh  test_integration.cyr  test_integration.tcyr
tests/bcyr/: bench_all.bcyr  bench_compare.bcyr
tests/tcyr/: test_integration.tcyr
