[package]
name = "agnosys"
version = "0.23.3"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "AGNOS kernel interface — safe Rust bindings for Linux syscalls, Landlock, seccomp, udev, TPM, LUKS, dm-verity"
repository = "https://github.com/MacCracken/agnosys"
readme = "README.md"
publish = false
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["syscall", "error"]
syscall = ["error"]
error = []
udev = ["error"]
landlock = ["error", "dep:bitflags"]
seccomp = ["error"]
netns = ["error"]
luks = ["error"]
dmverity = ["error"]
ima = ["error"]
tpm = ["error"]
certpin = ["error"]
fuse = ["error"]
pam = ["error"]
mac = ["error", "syscall"]
audit = ["error"]
journald = ["error"]
bootloader = ["error"]
secureboot = ["error"]
update = ["error"]
agent = ["error", "syscall"]
drm = ["error"]
serde = ["dep:serde"]
logging = ["dep:tracing-subscriber"]
full = [
    "syscall", "error", "udev", "landlock", "seccomp", "netns",
    "luks", "dmverity", "ima", "tpm", "certpin", "fuse", "pam",
    "mac", "audit", "journald", "bootloader", "secureboot",
    "update", "agent", "drm", "logging", "serde",
]

[dependencies]
bitflags = { version = "2", optional = true }
libc = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
tracing = "0.1"

# Optional
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[[test]]
name = "integration"

[[example]]
name = "detect_hardware"
required-features = ["syscall", "error"]

[[example]]
name = "sysinfo"
required-features = ["syscall", "error"]

[[example]]
name = "enumerate_devices"
required-features = ["udev"]

[[example]]
name = "security_status"
required-features = ["mac", "landlock", "secureboot", "tpm", "ima"]

[[example]]
name = "gpu_info"
required-features = ["drm"]

[[example]]
name = "seccomp_sandbox"
required-features = ["seccomp"]
