[package]
name = "agnosys"
version = "0.23.3"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "AGNOS kernel interface — safe Rust bindings for Linux syscalls, Landlock, seccomp, udev, TPM, LUKS, dm-verity"
repository = "https://github.com/MacCracken/agnosys"
readme = "README.md"
publish = false
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["syscall", "error"]
syscall = ["error"]
error = []
udev = ["error"]
security = ["error", "dep:bitflags"]
landlock = ["security"]
seccomp = ["security"]
netns = ["error", "serde"]
luks = ["error", "dep:zeroize"]
dmverity = ["error", "dep:sha2", "dep:hex"]
ima = ["error", "dep:sha2"]
tpm = ["error", "dep:sha2", "dep:hex"]
certpin = ["error", "dep:chrono", "dep:sha2", "dep:hex"]
fuse = ["error"]
pam = ["error"]
mac = ["error", "syscall"]
audit = ["error", "dep:chrono", "dep:uuid", "dep:serde_json", "serde"]
journald = ["error"]
bootloader = ["error"]
secureboot = ["error", "dep:sha2", "dep:hex", "serde"]
update = ["error"]
agent = ["error", "syscall", "dep:chrono", "dep:uuid", "dep:serde_json", "dep:tokio", "dep:async-trait", "dep:anyhow", "dep:once_cell", "dep:sha2", "dep:reqwest", "serde"]
drm = ["error"]
llm = ["error", "dep:once_cell", "dep:serde_json", "dep:tokio", "dep:reqwest", "dep:anyhow", "serde"]
serde = ["dep:serde"]
logging = ["dep:tracing-subscriber"]
full = [
    "syscall", "error", "security", "udev", "netns",
    "luks", "dmverity", "ima", "tpm", "certpin", "fuse", "pam",
    "mac", "audit", "journald", "bootloader", "secureboot",
    "update", "agent", "drm", "llm", "logging", "serde",
]

[dependencies]
bitflags = { version = "2", optional = true }
libc = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = "2"
tracing = "0.1"
anyhow = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
zeroize = { version = "1", optional = true }
once_cell = { version = "1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
async-trait = { version = "0.1", optional = true }

# Optional
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false

[[test]]
name = "integration"

[[example]]
name = "detect_hardware"
required-features = ["syscall", "error"]

[[example]]
name = "sysinfo"
required-features = ["syscall", "error"]

[[example]]
name = "enumerate_devices"
required-features = ["udev"]

[[example]]
name = "security_status"
required-features = ["mac", "landlock", "secureboot", "tpm", "ima"]

[[example]]
name = "gpu_info"
required-features = ["drm"]

[[example]]
name = "seccomp_sandbox"
required-features = ["seccomp"]
