[package]
name = "agnosys"
version = "0.50.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "AGNOS kernel interface — safe Rust bindings for Linux syscalls, Landlock, seccomp, udev, TPM, LUKS, dm-verity"
repository = "https://github.com/MacCracken/agnosys"
readme = "README.md"
publish = false
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["syscall", "error"]
syscall = ["error"]
error = []
udev = ["error", "serde"]
security = ["error", "dep:bitflags"]
landlock = ["security"]
seccomp = ["security"]
netns = ["error", "serde"]
luks = ["error", "serde", "dep:zeroize"]
dmverity = ["error", "serde", "dep:sha2", "dep:hex"]
ima = ["error", "serde", "dep:sha2", "dep:hex"]
tpm = ["error", "serde", "dep:sha2", "dep:hex"]
certpin = ["error", "serde", "dep:chrono", "dep:sha2", "dep:hex", "dep:serde_json"]
fuse = ["error", "serde"]
pam = ["error", "serde"]
mac = ["error", "serde", "syscall"]
audit = ["error", "serde", "dep:chrono", "dep:uuid", "dep:serde_json"]
journald = ["error", "serde", "dep:chrono", "dep:serde_json"]
bootloader = ["error", "serde"]
secureboot = ["error", "serde", "dep:sha2", "dep:hex"]
update = ["error", "serde", "dep:chrono", "dep:sha2", "dep:hex", "dep:serde_json"]
drm = ["error"]
serde = ["dep:serde"]
logging = ["dep:tracing-subscriber"]
full = [
    "syscall", "error", "security", "udev", "netns",
    "luks", "dmverity", "ima", "tpm", "certpin", "fuse", "pam",
    "mac", "audit", "journald", "bootloader", "secureboot",
    "update", "drm", "logging", "serde",
]

[dependencies]
bitflags = { version = "2", optional = true }
libc = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
sha2 = { version = "0.11", optional = true }
hex = { version = "0.4", optional = true }
zeroize = { version = "1", optional = true }
# Optional
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false

[[test]]
name = "integration"

[[example]]
name = "detect_hardware"
required-features = ["syscall", "error"]

[[example]]
name = "sysinfo"
required-features = ["syscall", "error"]

[[example]]
name = "enumerate_devices"
required-features = ["udev"]

[[example]]
name = "security_status"
required-features = ["mac", "landlock", "secureboot", "tpm", "ima"]

[[example]]
name = "gpu_info"
required-features = ["drm"]

[[example]]
name = "seccomp_sandbox"
required-features = ["seccomp"]

[[example]]
name = "audit_status"
required-features = ["audit"]

[[example]]
name = "pam_users"
required-features = ["pam"]

[[example]]
name = "journal_query"
required-features = ["journald"]

[[example]]
name = "boot_info"
required-features = ["bootloader"]

[[example]]
name = "cert_pinning"
required-features = ["certpin"]

[[example]]
name = "verity_check"
required-features = ["dmverity"]

[[example]]
name = "update_state"
required-features = ["update"]

[[example]]
name = "network_namespaces"
required-features = ["netns"]
