[package]
name = "agnosys-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.agnosys]
path = ".."
features = ["full"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_luks_header"
path = "fuzz_targets/fuzz_luks_header.rs"
doc = false

[[bin]]
name = "fuzz_verity_superblock"
path = "fuzz_targets/fuzz_verity_superblock.rs"
doc = false

[[bin]]
name = "fuzz_certpin_der"
path = "fuzz_targets/fuzz_certpin_der.rs"
doc = false

[[bin]]
name = "fuzz_audit_line"
path = "fuzz_targets/fuzz_audit_line.rs"
doc = false

[[bin]]
name = "fuzz_pam_config"
path = "fuzz_targets/fuzz_pam_config.rs"
doc = false

[[bin]]
name = "fuzz_boot_entry"
path = "fuzz_targets/fuzz_boot_entry.rs"
doc = false

[[bin]]
name = "fuzz_ima_measurement"
path = "fuzz_targets/fuzz_ima_measurement.rs"
doc = false

[[bin]]
name = "fuzz_uevent_msg"
path = "fuzz_targets/fuzz_uevent_msg.rs"
doc = false
